[gd_scene load_steps=17 format=3 uid="uid://d3i2wa4q6gepu"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_3vl4j"]
[ext_resource type="Texture2D" uid="uid://d26fo4r3s0got" path="res://assets/StandardTileset.png" id="2_432dd"]
[ext_resource type="Texture2D" uid="uid://c1xc5rm58asqs" path="res://assets/player_0.png" id="2_uf8iu"]
[ext_resource type="Texture2D" uid="uid://cfkkmh44xxfnv" path="res://assets/player_1.png" id="3_pdcv2"]
[ext_resource type="PackedScene" uid="uid://b1fya3pffgkcm" path="res://scenes/Firearm.tscn" id="3_rid25"]
[ext_resource type="PackedScene" uid="uid://c8sg8bew2kv4q" path="res://scenes/Ability.tscn" id="6_1ee1w"]
[ext_resource type="Texture2D" uid="uid://fhdr6r5xp6m6" path="res://assets/hearts_empty.png" id="6_k8qsi"]
[ext_resource type="Texture2D" uid="uid://bxijeinbbgcn2" path="res://assets/hearts_full.png" id="7_4wlsm"]
[ext_resource type="PackedScene" uid="uid://c3v7kbpa17in0" path="res://scenes/Goblin.tscn" id="7_qhgxf"]
[ext_resource type="PackedScene" uid="uid://cfm3bcjgjqtck" path="res://scenes/Golem.tscn" id="8_0m88f"]
[ext_resource type="AudioStream" uid="uid://celct40ulv0s" path="res://assets/hurt.wav" id="10_ur7w6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_swevk"]
radius = 7.0
height = 24.0

[sub_resource type="SpriteFrames" id="SpriteFrames_tpaxj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_uf8iu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_uf8iu")
}, {
"duration": 1.0,
"texture": ExtResource("3_pdcv2")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4edw"]
size = Vector2(14, 3)

[sub_resource type="ViewportTexture" id="ViewportTexture_qqooj"]
viewport_path = NodePath("OverheadUI")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_4ei3r"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:username")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath(".:health")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath(".:score")
properties/3/spawn = true
properties/3/sync = true
properties/4/path = NodePath(".:dormant")
properties/4/spawn = true
properties/4/sync = true
properties/5/path = NodePath("Sprite:animation")
properties/5/spawn = true
properties/5/sync = true
properties/6/path = NodePath("HandPivot:rotation")
properties/6/spawn = true
properties/6/sync = true
properties/7/path = NodePath(".:team_index")
properties/7/spawn = true
properties/7/sync = true
properties/8/path = NodePath("OverheadUI/Username:text")
properties/8/spawn = true
properties/8/sync = true
properties/9/path = NodePath("HandPivot/Hand:scale")
properties/9/spawn = true
properties/9/sync = true
properties/10/path = NodePath("Sprite:flip_h")
properties/10/spawn = true
properties/10/sync = true
properties/11/path = NodePath(".:shield")
properties/11/spawn = true
properties/11/sync = true

[node name="Player" type="CharacterBody2D" groups=["Hurtable", "Player"]]
script = ExtResource("1_3vl4j")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_swevk")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
z_index = 3
sprite_frames = SubResource("SpriteFrames_tpaxj")
animation = &"walk"
autoplay = "idle"

[node name="Foot" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collider" type="CollisionShape2D" parent="Foot"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_o4edw")

[node name="OverheadUI" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(512, 64)
render_target_update_mode = 4

[node name="Username" type="Label" parent="OverheadUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 64
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OverheadUISprite" type="Sprite2D" parent="."]
z_index = 4096
position = Vector2(0, -18)
scale = Vector2(0.1, 0.1)
texture = SubResource("ViewportTexture_qqooj")

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2(0, -32)
enabled = false
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="AudioListener" type="AudioListener2D" parent="Camera"]

[node name="HandPivot" type="Node2D" parent="."]

[node name="Hand" type="Node2D" parent="HandPivot"]
position = Vector2(12, 0)

[node name="AK-47" parent="HandPivot/Hand" instance=ExtResource("3_rid25")]
self_modulate = Color(0.333333, 1, 0, 1)
z_index = 4
texture = ExtResource("2_432dd")
region_enabled = true
region_rect = Rect2(126, 18, 18, 18)
damage = 2
firerate = 12
accuracy = 2

[node name="MP5" parent="HandPivot/Hand" instance=ExtResource("3_rid25")]
self_modulate = Color(1, 0, 0.117647, 1)
z_index = 4
texture = ExtResource("2_432dd")
region_enabled = true
region_rect = Rect2(126, 18, 18, 18)
damage = 2
firerate = 18
accuracy = 5
mag_size = 45
speed_multiplier = 1.2

[node name="AWM" parent="HandPivot/Hand" instance=ExtResource("3_rid25")]
self_modulate = Color(0.833333, 1, 0, 1)
z_index = 4
texture = ExtResource("2_432dd")
region_enabled = true
region_rect = Rect2(126, 18, 18, 18)
damage = 32
firerate = 1
accuracy = 0
mag_size = 3
can_destroy_terrain = true
speed_multiplier = 0.8

[node name="M90" parent="HandPivot/Hand" instance=ExtResource("3_rid25")]
self_modulate = Color(100, 100, 100, 1)
z_index = 4
texture = ExtResource("2_432dd")
region_enabled = true
region_rect = Rect2(126, 18, 18, 18)
damage = 2
firerate = 2
pellet_count = 12
accuracy = 8
mag_size = 5
speed_multiplier = 0.8

[node name="Abilities" type="Node2D" parent="."]

[node name="Passive" type="Node2D" parent="Abilities"]

[node name="Fast Feet" parent="Abilities/Passive" instance=ExtResource("6_1ee1w")]
type = 1
style = 1
buff_permenent = true
buff_speed = 32

[node name="Strong Feet" parent="Abilities/Passive" instance=ExtResource("6_1ee1w")]
type = 1
style = 1
buff_permenent = true
buff_jump_height = 32

[node name="Active" type="Node2D" parent="Abilities"]

[node name="Fireball" parent="Abilities/Active" instance=ExtResource("6_1ee1w")]
active_recharge = 16
projectile_count = 1
projectile_delay = 0.2

[node name="Stimulant" parent="Abilities/Active" instance=ExtResource("6_1ee1w")]
style = 1
buff_speed = 32

[node name="Heal" parent="Abilities/Active" instance=ExtResource("6_1ee1w")]
style = 1
buff_permenent = true
buff_health = 16

[node name="Ultimate" type="Node2D" parent="Abilities"]

[node name="Goblins" parent="Abilities/Ultimate" instance=ExtResource("6_1ee1w")]
type = 2
style = 2
ultimate_charge = false
summon_scene = ExtResource("7_qhgxf")
summon_count = 3
summon_delay = 0.2

[node name="Golem" parent="Abilities/Ultimate" instance=ExtResource("6_1ee1w")]
type = 2
style = 2
ultimate_charge = false
summon_scene = ExtResource("8_0m88f")
summon_count = 1
summon_delay = 0.2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeTillStart" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 32
theme_override_constants/shadow_offset_y = 32
theme_override_constants/outline_size = 48
theme_override_constants/shadow_outline_size = 48
theme_override_font_sizes/font_size = 256
text = "15..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Leave" type="Button" parent="CanvasLayer/UI"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 1
offset_right = 8.0
offset_bottom = 8.0
text = "Leave Game"

[node name="Healthbar" type="TextureProgressBar" parent="CanvasLayer/UI"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = -48.0
grow_vertical = 0
scale = Vector2(4, 4)
max_value = 32.0
value = 32.0
texture_under = ExtResource("6_k8qsi")
texture_progress = ExtResource("7_4wlsm")

[node name="Shieldbar" type="TextureProgressBar" parent="CanvasLayer/UI"]
self_modulate = Color(0, 1.5, 1.5, 1)
custom_minimum_size = Vector2(64, 16)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = -112.0
grow_vertical = 0
scale = Vector2(4, 4)
max_value = 32.0
texture_under = ExtResource("6_k8qsi")
texture_progress = ExtResource("7_4wlsm")

[node name="ItemInfo" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -192.0
offset_right = 256.0
offset_bottom = -128.0
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "AK-47: 0 / 30"
vertical_alignment = 1

[node name="Inventory" type="VBoxContainer" parent="CanvasLayer/UI"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -250.0
offset_right = 128.0
offset_bottom = 250.0
grow_vertical = 2
alignment = 1

[node name="Abilities" type="HBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -128.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Active1" type="Control" parent="CanvasLayer/UI/Abilities"]
custom_minimum_size = Vector2(160, 128)
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/UI/Abilities/Active1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Name"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/Abilities/Active1"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -13.5
offset_right = 2.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
max_value = 32.0
step = 0.0
value = 32.0

[node name="Active2" type="Control" parent="CanvasLayer/UI/Abilities"]
custom_minimum_size = Vector2(160, 128)
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/UI/Abilities/Active2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Name"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/Abilities/Active2"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -13.5
offset_right = 2.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
max_value = 32.0
step = 0.0
value = 32.0

[node name="Ultimate" type="Control" parent="CanvasLayer/UI/Abilities"]
custom_minimum_size = Vector2(160, 128)
layout_mode = 2

[node name="Name" type="Label" parent="CanvasLayer/UI/Abilities/Ultimate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Name"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/Abilities/Ultimate"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -13.5
offset_right = 2.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 1.0
value = 1.0
show_percentage = false

[node name="TeamDown" type="Button" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_right = -32.0
offset_bottom = 32.0
grow_horizontal = 0
text = "-"

[node name="TeamUp" type="Button" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
text = "+"

[node name="TeamIndex" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 32.0
offset_bottom = 64.0
grow_horizontal = 0
text = "Team: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scoreboard" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -512.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="UpdateTimer" type="Timer" parent="CanvasLayer/UI/Scoreboard"]
wait_time = 0.5
autostart = true

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_ur7w6")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_4ei3r")

[connection signal="body_entered" from="Foot" to="." method="_on_foot_body_entered"]
[connection signal="body_exited" from="Foot" to="." method="_on_foot_body_exited"]
[connection signal="pressed" from="CanvasLayer/UI/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/TeamDown" to="." method="_on_team_down_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/TeamUp" to="." method="_on_team_up_pressed"]
[connection signal="timeout" from="CanvasLayer/UI/Scoreboard/UpdateTimer" to="." method="update_scoreboard"]
